# hw06-midoripierce

./: .buildinfo  .gitignore  Makefile  README.html  _config.yml  _toc.yml  conf.py  environment.yml  genindex.html  hw06-description.html  index.html  index.ipynb  search.html  searchindex.js  setup.cfg
.doctrees/: README.doctree  environment.pickle  hw06-description.doctree  index.doctree
_sources/: README.md  index.ipynb
ligotools/: __init__.py  utils.py
ligotools/test/: tests_readligo.py  tests_utils.py
