[metadata]
name             = ligotools
version          = attr: ligo.__version__
author           = Ligo Scientific Collaboration (LSC) and Midori Pierce
author_email     = midoripierce@berkeley.edu
description      = Repro for Ligo
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords         = tools, toys
license          = BSD 3-Clause License
classifiers      =
	Programming Language :: Python :: 2.7
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires  = >= 2.7,
install_requires =
	tqdm

[options.packages.find]
exclude =
    examples*
    docs*
#    ligotools.tests*